# ninja-clean-failure

./: CMakeLists.txt  LICENSE  README.md  main.cpp
